--- a/examples/asa_gui_modules.yaml
+++ b/examples/asa_gui_modules.yaml
@@ -7,16 +7,18 @@ modules:
   <root>/chore/minified_libs/venv/IPython/__init__.py: ipython
   <root>/run.py: omnicomm-serdes-tool-run
 build:
-  module_graphs:
-    - omnicomm-serdes-tool-run
-  spec_files:
-    - <root>/captures/
-    - <root>/config/
-    - <root>/data/
-    - <root>/lib/libmdio_mini/
-    - <root>/lib/qmlease/
-    - <root>/log/
-    - <root>/omnicomm_serdes_tool/ui/
-    - <root>/plugins/
-    - <root>/sample/
-    - <root>/run.py
+  module_graphs: '*'
+  # spec_files:
+  #   - <root>/captures/
+  #   - <root>/config/
+  #   - <root>/data/
+  #   - <root>/lib/libmdio_mini/
+  #   - <root>/lib/omni_driver_kit/
+  #   - <root>/lib/qmlease/
+  #   - <root>/log/
+  #   - <root>/omnicomm_serdes_tool/ui/
+  #   - <root>/plugins/
+  #   - <root>/sample/
+  #   - <root>/run.py
+next: |
+  see `<omnicomm_serdes_tool_project>/build/minified_libs/workaround.py`.
