--- a/patches/default_patches.yaml
+++ b/patches/default_patches.yaml
@@ -1,20 +1,41 @@
-
+httptools:
+  files:
+    - parser/parser.cp312-win_amd64.pyd
+    - parser/url_parser.cp312-win_amd64.pyd
 IPython:
   imports:
     - ../pygments/lexers/__init__.py
     - ../pygments/lexers/python.py
     - ../pygments/unistring.py
+jaraco:
+  files:
+    - text/Lorem ipsum.txt
 matplotlib:
   files:
     - backends/_backend_agg.cp312-win_amd64.pyd
     - mpl-data/
     - ../kiwisolver/_cext.cp312-win_amd64.pyd
     - ../matplotlib.libs/
+# numpy:
+#   files:
+#     - core/_multiarray_tests.cp312-win_amd64.pyd
+#     - core/_multiarray_umath.cp312-win_amd64.pyd
+#     - fft/_pocketfft_internal.cp312-win_amd64.pyd
+#     - linalg/_umath_linalg.cp312-win_amd64.pyd
+#     - random/_bounded_integers.cp312-win_amd64.pyd
+#     - random/_common.cp312-win_amd64.pyd
+#     - random/_generator.cp312-win_amd64.pyd
+#     - random/_mt19937.cp312-win_amd64.pyd
+#     - random/_pcg64.cp312-win_amd64.pyd
+#     - random/_philox.cp312-win_amd64.pyd
+#     - random/_sfc64.cp312-win_amd64.pyd
+#     - random/bit_generator.cp312-win_amd64.pyd
+#     - random/mtrand.cp312-win_amd64.pyd
+#     - ../numpy.libs/
 numpy:
+  version: 2.0.1
   files:
-    - core/_multiarray_tests.cp312-win_amd64.pyd
-    - core/_multiarray_umath.cp312-win_amd64.pyd
-    - fft/_pocketfft_internal.cp312-win_amd64.pyd
+    - fft/_pocketfft_umath.cp312-win_amd64.pyd
     - linalg/_umath_linalg.cp312-win_amd64.pyd
     - random/_bounded_integers.cp312-win_amd64.pyd
     - random/_common.cp312-win_amd64.pyd
@@ -125,13 +146,14 @@ qmlease:
     - widgets/
 rich:
   imports:
-    # for `rich.syntax` to render traceback panel
     - ../pygments/lexers/__init__.py
     - ../pygments/lexers/python.py
+    - ../pygments/styles/default.py
     - ../pygments/unistring.py
   files:
     - ../pygments/lexers/__init__.py
     - ../pygments/lexers/python.py
+    - ../pygments/styles/default.py
     - ../pygments/unistring.py
 shiboken6:
   files:
@@ -170,6 +192,9 @@ toga:
     - ../travertino-0.3.0.dist-info/
     - ../_cffi_backend.cp312-win_amd64.pyd
     - ../clr.py
+tracerite:
+  files:
+    - style.css
 zmq:
   files:
     - backend/cython/
