refactor incremental exports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,18 @@
-[tool.poetry]
+[project]
 name = "tree-shaking"
 version = "0.1.0a0"
 description = "Python tree-shaking for dependencies to reduce the size of packaging."
-authors = ["Likianta <likianta@foxmail.com>"]
+authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
+homepage = "https://github.com/likianta/python-tree-shaking"
 # readme = "README.md"
 packages = [{ include = "tree_shaking" }]
+requires-python = ">=3.12"
+dynamic = ["dependencies"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
 argsense = { version = "^1.0.0a1", source = "likianta" }
-lk-utils = { version = "^3.3.0a4", source = "likianta" }
+lk-utils = { version = "^3.3.0a12", source = "likianta" }
 
 [[tool.poetry.source]]
 name = "tsinghua"
