optimize implicit imports list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,23 @@
 [project]
 name = "tree-shaking"
-version = "0.1.1a0"
+version = "0.1.1"
 description = "Python tree-shaking for dependencies to reduce the size of packaging."
 authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
-homepage = "https://github.com/likianta/python-tree-shaking"
 readme = "README.md"
 packages = [{ include = "tree_shaking" }]
 requires-python = ">=3.12"
 dynamic = ["dependencies"]
 
+[project.urls]
+homepage = "https://github.com/likianta/python-tree-shaking"
+
 [tool.poetry.dependencies]
 python = "^3.12"
-argsense = ">=0.7.2"
+argsense = "^1.0.0"
 lk-utils = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
-argsense = { version = "^1.0.0a1", source = "likianta" }
+argsense = { version = "^1.0.1b0", source = "likianta" }
 lk-utils = { version = "^3.3.0a12", source = "likianta" }
 pyecharts = "^2.0.8"
 
