--- a/tree_shaking/patches/optional_import_list.yaml
+++ b/tree_shaking/patches/optional_import_list.yaml
@@ -1,3 +1,4 @@
+# TODO: this file is not used yet.
 # library A imports library B, but in `if` case.
 # we will mark A.B is optional import.
 # we recommand you to check the optional imports after module graphs generated.
