--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ __pycache__/
 !/tree_shaking/_cache/dumped_resources_maps/
 !/tree_shaking/_cache/module_graphs/
 !/tree_shaking/_cache/ignores.txt
+!/tree_shaking/_rooms/*
 !**/.gitkeep
