--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tree-shaking"
-version = "0.2.0"
+version = "0.3.0a0"
 description = "Python tree-shaking for dependencies to reduce the size of packaging."
 authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
 readme = "README.md"
@@ -15,6 +15,7 @@ homepage = "https://github.com/likianta/python-tree-shaking"
 python = "^3.12"
 argsense = "^1.0.0"
 lk-utils = "^3.2.0"
+pyinstaller = { version = "^6.15.0", python = ">=3.12,<3.15" }
 
 [tool.poetry.group.dev.dependencies]
 argsense = { version = "^1.1.0", source = "likianta" }
